<?xml version="1.0"?>
<package format="2">
  <name>raspimouse_slam</name>
  <version>0.0.2</version>
  <description>The raspimouse_slam package</description>

  <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>
  <author email="ryuichiueda@gmail.com">Ryuichi Ueda</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/raspimouse_slam</url> -->

  <exec_depend>raspimouse_ros_2</exec_depend>
  <exec_depend>raspimouse_game_controller</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
